--- a/components/content/contact.pug
+++ b/components/content/contact.pug
@@ -23,4 +23,4 @@
                         i.fa-regular.fa-square-check
                         p Thanh toán đa dạng dễ dàng
         .img__app.position-absolute.d-lg-block.d-none
-            img(src="https://storage.googleapis.com/public-tripi/mytour-web/app_mytour_banner.png", alt="")
+            img(src="/assets/image/app.png", alt="")
