--- a/mixin.pug
+++ b/mixin.pug
@@ -2,7 +2,7 @@
 mixin card(item)
     .card__item.cursor-pointer
         .card__item__img 
-            img(src="https://img.tripi.vn/cdn-cgi/image/width=548,height=310/https://www.googleapis.com/download/storage/v1/b/tourcdn/o/photos%2FBZ1O6VKR21_%2Ftmp%2Fplaytemp8992226862162980543%2FmultipartBody8889052234719766714asTemporaryFile?generation=1595488423270831&alt=media", alt="img")
+            img(src="/assets/image/phuquocresort.jpg", alt="img")
         .card__item__desc 
             .desc__title.fw-bold= item.title
             .desc__rate.d-flex
